--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 * {
 	font-family: "Jost", sans-serif;
 	margin: 0;
@@ -7,121 +5,135 @@
 	box-sizing: border-box;
 }
 
-body {
+::-webkit-scrollbar{
+    display: none;
+}
+
+header {
 	display: flex;
-	height: 100vh;
-	width: 100vw;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-}
-
-.contenedorLogoNombre {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 50vw;
-	height: 80vh;
-	border-right: 2px solid #A100FF;
-}
-
-.contenedorLogoNombre img {
-	width: 40vw;
-	padding-bottom: 20px;
-}
-
-.contenedorLogin {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 50vw;
-	height: 80vh;
-	border-left: 2px solid #A100FF;
-}
-
-/* // Diseño para móvil  */
-
-@media screen and (max-width: 768px) {
-	body {
-		flex-direction: column;
-	}
-
-	.contenedorLogoNombre {
-		border: none;
-		border-bottom: 2px solid #A100FF;
-	}
-	
-	.contenedorLogoNombre h1 {
-		font-size: 4vw;
-	}
-
-	.contenedorLogin {
-		border: none;
-		border-top: 2px solid #A100FF;
-	}
-}
-
-.input-field {
-	position: relative;
-}
-
-.input-field input {
-	width: 350px;
-	height: 60px;
-	border-radius: 6px;
-	font-size: 18px;
-	padding: 0 15px;
-	border: 2px solid #A100FF;
-	background: transparent;
-	color: black;
-	outline: none;
-}
-
-.input-field label {
-	position: absolute;
-	top: 50%;
-	left: 15px;
-	transform: translateY(-50%);
-	color: black;
-	font-size: 19px;
-	pointer-events: none;
-	transition: .3s;
-}
-
-
-
-.input-field input:focus ~ label, 
-.input-field input:valid ~ label {
-	top: 0;
-	left: 15px;
-	font-size: 16px;
-	padding: 0 2px;
-	background: white;
-}
-
-.input-submit {
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-}
-
-.input-submit input {
+	height: 15vh;
 	background-color: #A100FF;
-	width: 80px;
-	height: 40px;
-	border-radius: 6px;
-	border: 1px solid white;
 	color: white;
-	font-size: 14px;
+	border-bottom: 2px solid #A100FF;
 }
 
-.enlaceRegistro {
-	display:flex;
-	justify-content: flex-end;
+
+
+.imagenNombreCentro{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: space-around;
+	width:30vw;
 }
 
-.enlaceRegistro a {
-	text-decoration: none;
+header .tarjetaAlumno {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 12vh;
+	width: 25vw;
+	border-radius: 10px;
 	color: #A100FF;
+	background-color: white;
+	border: 1px solid black;
+	margin-right: 30px;
+}
+
+.tarjetaAlumno img{
+	height: 9vh; 
+	border-radius: 80px; 
+	margin-right: 10px;
+}
+
+.nombreCurso {
+	display: flex;
+	flex-direction: column;
+    margin: 5px;
+}
+
+.contenedor {
+	display: flex;
+}
+
+.menu {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	height: 100vh;
+	width: 15vw;
+	background-color: white;
+	color: #A100FF;
+	box-shadow: 2px 5px 29px 2px grey;
+}
+
+.menuOpcion p {
+	padding: 3vh;
+}
+
+.menuOpcion:hover {
+	background-color: #A100FF;
+	color: white;
+}
+
+.menuOpcion:hover path{
+    fill: white;
+}
+
+.menuOpcion{
+    display: flex;
+    align-items: center;
+    width: 15vw;
+    padding-left: 8px;
+}
+
+.menuOpcion svg{
+	height: 5vh;
+	width: 4vw;
+}
+
+.menuOpciones{
+	height: 60vh;
+	width: 15vw;
+}
+
+.cerrarSesion{
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	height: 45vh;
+    color: #7501b8;
+}
+
+.cerrarSesion p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	background-color: #7501b8;
+	width: 15vw;
+	height: 7vh;
+	color: white; 
+}
+
+.contenedorPrincipal {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 85vw;
+	height: 100vh;
+	overflow: auto;
+}
+
+
+footer {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	height: 10vh;
+	color: white;
+	background-color: black;
 }
