--- a/src/main/webapp/styles/styleRegister.css
+++ b/src/main/webapp/styles/styleRegister.css
@@ -1,22 +1,34 @@
 @charset "ISO-8859-1";
+ 
+* {
+	font-family: "Jost", sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+ 
 body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
+	background-image: url('../images/backgroundImage2.png');
+	background-size: cover;
+	flex-direction: column;
 }
  
 .login {
 	padding:50px;
-	padding-top:35px;
-	padding-bottom:35px;
+	padding-top:28px;
+	padding-bottom:25px;
 	display: flex;
 	flex-direction: column;
 	justify-content:center;
 	align-items:center;
-
+	background-color: white;
 	border: solid black 2px;
 	border-radius:30px;
+	border-color: #A100FF;
 }
  
 .input_container{
@@ -27,22 +39,35 @@ body {
 .input_container input{
 	width:205px;
 }
+ 
+input {
+	
+	padding-left: 5px;
+}
+ 
 input, select {
 	margin-bottom: 15px;
+	border-radius: 3px;
+	border: 1.8px black solid;
+ 
 }
  
 select {
-	width:210px;
+	width:205px;
+	font-size: 15px;
+ 
 }
  
  
 button {
-	color: white;
 	background-color: #A100FF;
-	border-radius: 5px;
-	border: solid 1px black;
 	width: 80px;
-	font-weight: bold;
+	height: 25px;
+	border-radius: 6px;
+	border: 1px solid white;
+	color: white;
+	font-size: 14px;
+	margin-top: 5px;
 }
 .date{
 	width: 165px;;
@@ -62,26 +87,42 @@ button {
 	background: white;
 	font-size:12px;
 }
-
-.input_container input:focus,
-.input_container input:valid {
-
-	border-color: #A100FF;
-}
-
+ 
 #logoAccenture {
-
+ 
 	width: 200px;
-	margin-top: 70px;
+	margin-top: 15px;
 	margin-bottom: 20px;
-
+ 
 }
-
+ 
 #mainContainer {
 	
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-
+ 
+}
+ 
+.login a {
+	
+	font-size: 13px;
+	color: black;
+	margin-top: 10px;
+}
+ 
+.login a:hover {
+	
+	color: #A100FF;
+ 
+}
+ 
+ 
+footer {
+ 
+	color: #A100FF;
+	margin-top: 10px;
+	font-style: italic;
+ 
 }
