--- a/src/main/webapp/styles/styleRegister.css
+++ b/src/main/webapp/styles/styleRegister.css
@@ -1,4 +1,8 @@
-@charset "ISO-8859-1";
+@charset "UTF-8";
+ 
+/************* stylesheet from register.jsp *************/
+ 
+/* Aspectos generales */
  
 * {
 	font-family: "Jost", sans-serif;
@@ -11,118 +15,233 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	overflow: hidden;
-	background-image: url('../images/backgroundImage2.png');
+	overflow-y: auto;
+	background-image: url('../images/registerBackground.png');
 	background-size: cover;
 	flex-direction: column;
+	background-repeat: no-repeat;
 }
  
+/* Login */
+ 
 .login {
-	padding:50px;
-	padding-top:28px;
+	padding:8em;
+	padding-top:35px;
 	padding-bottom:25px;
 	display: flex;
 	flex-direction: column;
 	justify-content:center;
 	align-items:center;
 	background-color: white;
-	border: solid black 2px;
 	border-radius:30px;
-	border-color: #A100FF;
+	box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.4);
 }
+ 
+.login a {
+	font-size: 13px;
+	margin-top: 10px;
+}
+ 
+.login a:hover {
+	color: #A100FF;
+}
+ 
+.input_container label{
+	position: absolute;
+	left:5px;
+	top:1.5px;
+	pointer-events:none;
+	padding: 4px;
+}
+ 
+/* Input */
  
 .input_container{
 	width:100%;
 	position: relative;
 }
  
-.input_container input{
-	width:205px;
+.input_container input, select{
+	width:350px;
+	padding: 5px ;
+	padding-left: 8px;
 }
  
 input {
-	
-	padding-left: 5px;
+	padding-left: 8px;
 }
+ 
  
 input, select {
 	margin-bottom: 15px;
 	border-radius: 3px;
-	border: 1.8px black solid;
- 
-}
- 
-select {
-	width:205px;
+	border: 1.8px #A100FF solid;
 	font-size: 15px;
- 
+	padding: 5px ;
 }
  
- 
-button {
-	background-color: #A100FF;
-	width: 80px;
-	height: 25px;
-	border-radius: 6px;
-	border: 1px solid white;
-	color: white;
-	font-size: 14px;
-	margin-top: 5px;
-}
-.date{
-	width: 165px;;
-}
-.input_container label{
-	position: absolute;
-	left:5px;
-	top:1.5px;
-	pointer-events:none;
-}
- 
-.input_container input:focus ~ label,
-.input_container input:valid ~ label {
+.input_container input:focus ~ label, .input_container input:valid ~ label {
 	top:-10px;
 	left:10px;
 	padding: 0 2px;
 	background: white;
 	font-size:12px;
+	transition: 0.3s ;
 }
  
-#logoAccenture {
+.input_container input:focus, .input_container select:focus {
+    border-color: #A100FF;
+    box-shadow: 0 0 5px rgba(161, 0, 255, 0.5);
+    outline: none;
+}
  
+ 
+/* Estilo botón */
+ 
+/* Capa botón */
+ 
+.register-button {
+  display: inline-block;
+  padding: 0.75rem 1.25rem;
+  border-radius: 10rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 0.15rem;
+  transition: all 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  cursor: pointer;
+}
+ 
+.register-button {
+	color: white;
+}
+ 
+/* Capa sin interacción */
+ 
+.register-button::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #A100FF;
+  border-radius: 10rem;
+  z-index: -2;
+}
+ 
+/* Capa con interacción */
+ 
+.register-button::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #9100e6; /* Adjust color manually */
+  transition: all 0.3s;
+  border-radius: 10rem;
+  z-index: -1;
+}
+ 
+.register-button:hover {
+  color: white !important;
+}
+ 
+.register-button:hover::before {
+  width: 100%;
+}
+ 
+.container-button {
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
+}
+ 
+/* Account Animation */
+ 
+/* Define la animación */
+ 
+@keyframes linkBounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+ 
+/* Estilo del enlace */
+ 
+.animated-link {
+  text-decoration: none;
+  color: #333;
+  transition: all 0.3s;
+}
+ 
+/* Estilo del enlace cuando está enfocado */
+ 
+.animated-link:hover {
+  font-weight: bold;
+  animation: linkBounce 0.5s ease;
+}
+ 
+ 
+/* Estilo del contenedor */
+ 
+.account-animation {
+	margin-top: 2%;	
+}
+ 
+/* IDs */
+ 
+#logoAccenture {
 	width: 200px;
 	margin-top: 15px;
 	margin-bottom: 20px;
- 
 }
  
 #mainContainer {
-	
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
- 
+	margin-left: auto;
+	margin-right: auto;
 }
  
-.login a {
-	
-	font-size: 13px;
-	color: black;
-	margin-top: 10px;
-}
- 
-.login a:hover {
-	
-	color: #A100FF;
- 
-}
- 
+/* Footer */
  
 footer {
- 
 	color: #A100FF;
-	margin-top: 10px;
+	margin-top: 20px;
 	font-style: italic;
+ 	margin-bottom: 20px;
+}
  
+/* Responsive */
+ 
+@media screen and (max-width: 450px) {
+	.input_container input, select{
+		width:300px;
+	}
+	.login {
+		padding:1.3em;
+	}
+}
+ 
+@media screen and (max-width: 630px) {
+	.input_container input, select{
+		width:300px;
+	}
+	.login {
+		padding:2.5em;
+	}
 }
