agregar label en fecha de nacimiento

--- a/src/main/webapp/styles/styleRegister.css
+++ b/src/main/webapp/styles/styleRegister.css
@@ -55,7 +55,12 @@ body {
 }
  
 /* Input */
- 
+
+#dateLabel {
+
+    background-color: white;
+}
+
 .input_container{
 	width:100%;
 	position: relative;
