--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -5,8 +5,8 @@
 	box-sizing: border-box;
 }
 
-::-webkit-scrollbar{
-    display: none;
+::-webkit-scrollbar {
+	display: none;
 }
 
 header {
@@ -14,44 +14,58 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	height: 15vh;
-	background-color: #A100FF;
-	color: white;
-	border-bottom: 2px solid #A100FF;
+	background-color: white;
+	color: #A100FF;
+	border-bottom: 3px solid #A100FF;
 }
 
-
-
-.imagenNombreCentro{
+.imagenNombreCentro {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: space-around;
-	width:30vw;
+	width: 30vw;
 }
 
+#menuCargador{
+	position: relative;
+    height: 100%;
+    width: 100%; 
+}
 header .tarjetaAlumno {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	height: 12vh;
-	width: 25vw;
+	width: 40vh;
 	border-radius: 10px;
 	color: #A100FF;
-	background-color: white;
-	border: 1px solid black;
 	margin-right: 30px;
+	background-color: white;
+	box-shadow: 2px 2px 5px 1px grey;
+	}
+
+header h1 {
+	margin-top: 2vh;
+	color: black;
 }
 
-.tarjetaAlumno img{
-	height: 9vh; 
-	border-radius: 80px; 
+.tarjetaAlumno img {
+	height: 9vh;
+	border-radius: 80px;
 	margin-right: 10px;
+}
+
+.tarjetaAlumno p {
+	color: #A100FF;
+	font-size: 20px;
+	padding: 2px;
 }
 
 .nombreCurso {
 	display: flex;
 	flex-direction: column;
-    margin: 5px;
+	margin: 5px;
 }
 
 .contenedor {
@@ -66,7 +80,6 @@ header .tarjetaAlumno {
 	width: 15vw;
 	background-color: white;
 	color: #A100FF;
-	box-shadow: 2px 5px 29px 2px grey;
 }
 
 .menuOpcion p {
@@ -74,58 +87,66 @@ header .tarjetaAlumno {
 }
 
 .menuOpcion:hover {
+	box-sizing: border-box;
 	background-color: #A100FF;
 	color: white;
 }
 
-.menuOpcion:hover path{
-    fill: white;
+.menuOpcion:hover path {
+	fill: white;
 }
 
-.menuOpcion{
-    display: flex;
-    align-items: center;
-    width: 15vw;
-    padding-left: 8px;
+.menuOpcion {
+	display: flex;
+	align-items: center;
+	width: 15vw;
+	padding-left: 8px;
+	transition: 0.1s;
 }
 
-.menuOpcion svg{
+.menuOpcion svg {
 	height: 5vh;
 	width: 4vw;
 }
 
-.menuOpciones{
+.menuOpciones {
 	height: 60vh;
 	width: 15vw;
 }
 
-.cerrarSesion{
+.cerrarSesion {
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
 	height: 45vh;
-    color: #7501b8;
+	color: #7501b8;
 }
 
-.cerrarSesion p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.cerrarSesion p {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: #7501b8;
 	width: 15vw;
 	height: 7vh;
-	color: white; 
+	color: white;
 }
 
 .contenedorPrincipal {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	justify-content: right;
 	height: 100vh;
 	width: 85vw;
-	height: 100vh;
 	overflow: auto;
+}
+ 
+#contenedorContent {
+	display:flex;
+	height: 100vh;
+	width: 100vw;
+	align-items: center;
+	justify-content: center;
 }
 
 
